Completed icon mapping.  Displaying current weather condition icon

--- a/icon-mapping.json
+++ b/icon-mapping.json
@@ -1,22 +1,22 @@
 {
   "chanceflurries": "\uf064",
-  "chancerain": "",
-  "chancesleet": "",
-  "chancesnow": "",
-  "chancetstorms": "",
-  "clear": "",
-  "cloudy": "",
-  "flurries": "",
-  "fog": "",
-  "hazy": "",
-  "mostlycloudy": "",
-  "mostlysunny": "",
-  "partlycloudy": "",
-  "partlysunny": "",
-  "sleet": "",
-  "rain": "",
-  "snow": "",
-  "sunny": "",
-  "tstorms": "",
-  "unknown": ""
+  "chancerain": "\uf019",
+  "chancesleet": "\uf0b5",
+  "chancesnow": "\uf01b",
+  "chancetstorms": "\uf01e",
+  "clear": "\uf00d",
+  "cloudy": "\uf002",
+  "flurries": "\uf064",
+  "fog": "\uf014",
+  "hazy": "\uf0b6",
+  "mostlycloudy": "\uf002",
+  "mostlysunny": "\uf00d",
+  "partlycloudy": "\uf002",
+  "partlysunny": "\uf00d",
+  "sleet": "\uf0b5",
+  "rain": "\uf01a",
+  "snow": "\uf01b",
+  "sunny": "\uf00d",
+  "tstorms": "\uf01e",
+  "unknown": "\uf00d"
 }
