Added night icons

--- a/icon-mapping.json
+++ b/icon-mapping.json
@@ -1,22 +1,42 @@
 {
-  "chanceflurries": "\uf064",
-  "chancerain": "\uf019",
-  "chancesleet": "\uf0b5",
-  "chancesnow": "\uf01b",
-  "chancetstorms": "\uf01e",
+  "chanceflurries": "\uf065",
+  "nt_chanceflurries": "\uf067",
+  "chancerain": "\uf008",
+  "nt_chancerain": "\uf028",
+  "chancesleet": "\uf0b2",
+  "nt_chancesleet": "\uf0b4",
+  "chancesnow": "\uf00a",
+  "nt_chancesnow": "\uf02a",
+  "chancetstorms": "\uf010",
+  "nt_chancetstorms": "\uf02d",
   "clear": "\uf00d",
+  "nt_clear": "\uf02e",
   "cloudy": "\uf002",
-  "flurries": "\uf064",
-  "fog": "\uf014",
+  "nt_cloudy": "\uf086",
+  "flurries": "\uf065",
+  "nt_flurries": "\uf067",
+  "fog": "\uf003",
+  "nt_fog": "\uf04a",
   "hazy": "\uf0b6",
+  "nt_hazy": "\uf07b",
   "mostlycloudy": "\uf002",
+  "nt_mostlycloudy": "\uf086",
   "mostlysunny": "\uf00d",
+  "nt_mostlysunny": "\uf07b",
   "partlycloudy": "\uf002",
+  "nt_partlycloudy": "\uf086",
   "partlysunny": "\uf00d",
-  "sleet": "\uf0b5",
-  "rain": "\uf01a",
-  "snow": "\uf01b",
+  "nt_partlysunny": "\uf07b",
+  "sleet": "\uf0b2",
+  "nt_sleet": "\uf0b4",
+  "rain": "\uf008",
+  "nt_rain": "\uf028",
+  "snow": "\uf00a",
+  "nt_snow": "\uf02a",
   "sunny": "\uf00d",
-  "tstorms": "\uf01e",
-  "unknown": "\uf00d"
+  "nt_sunny": "\uf07b",
+  "tstorms": "\uf010",
+  "nt_tstorms": "\uf02d",
+  "unknown": "\uf07b",
+  "nt_unknown": "\uf07b"
 }
